[nalytics] Span